@@ -6,7 +6,7 @@
 
 	<groupId>software.xdev</groupId>
 	<artifactId>spring-data-eclipse-store</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>spring-data-eclipse-store</name>
@@ -50,8 +50,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<!-- Should be in sync with org.eclipse.store:integrations-spring-boot3 -->
-		<org.springframework.boot.version>3.2.2</org.springframework.boot.version>
-		<org.eclipse.store.version>1.1.0</org.eclipse.store.version>
+		<org.springframework.boot.version>3.2.3</org.springframework.boot.version>
+		<org.eclipse.store.version>1.2.0</org.eclipse.store.version>
 	</properties>
 
 	<repositories>
@@ -225,7 +225,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.12.1</version>
+				<version>3.13.0</version>
 				<configuration>
 					<release>${maven.compiler.release}</release>
 					<compilerArgs>
@@ -258,6 +258,11 @@
 				<configuration>
 					<argLine>
 						--add-opens java.base/java.util=ALL-UNNAMED
+						--add-opens java.base/java.math=ALL-UNNAMED
+						--add-opens java.base/java.time=ALL-UNNAMED
+						--add-opens java.base/java.time.zone=ALL-UNNAMED
+						--add-opens java.base/java.util.concurrent=ALL-UNNAMED
+						--add-opens java.base/sun.util.calendar=ALL-UNNAMED
 						--add-exports java.base/jdk.internal.misc=ALL-UNNAMED
 					</argLine>
 				</configuration>
@@ -286,7 +291,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>3.2.0</version>
+						<version>3.2.1</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
@@ -334,7 +339,7 @@
 							<dependency>
 								<groupId>com.puppycrawl.tools</groupId>
 								<artifactId>checkstyle</artifactId>
-								<version>10.14.1</version>
+								<version>10.14.2</version>
 							</dependency>
 						</dependencies>
 						<configuration>
